added images to Readme and an .stl file

--- a/pottery.org
+++ b/pottery.org
@@ -17,6 +17,9 @@
 
 ** readme
 #+BEGIN_SRC markdown :tangle ./readme.md
+<img src="https://github.com/adam-james-v/pottery/blob/main/avase.png" width="300">
+<img src="https://github.com/adam-james-v/pottery/blob/main/bvase.png" width="300">
+
 # Pottery
 
 Programmatic CAD project for creating pottery-like geometry.
